--- a/Auriculoterapia/app/src/main/res/values/dimens.xml
+++ b/Auriculoterapia/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_size">16sp</dimen>
+    <dimen name="disponibilidad_margin_bottom">12dp</dimen>
 </resources>
