--- a/Auriculoterapia/app/src/main/res/layout/fragment_availability.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_availability.xml
@@ -30,6 +30,7 @@
                     android:textSize="@dimen/text_size"
                     android:layout_marginEnd="20dp"/>
                 <Spinner
+                    android:id="@+id/spinner_fecha_disponibilidad"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/text_size"/>
@@ -85,17 +86,34 @@
                     android:textSize="@dimen/text_size"
                     android:layout_marginBottom="@dimen/disponibilidad_margin_bottom"
                     />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerHorariosDecartados"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="@dimen/disponibilidad_margin_bottom">
+                    android:gravity="center">
 
-                </androidx.recyclerview.widget.RecyclerView>
+                    <EditText
+                        android:id="@+id/hora_descarte_inicio"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="09:00"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="10dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="-"/>
+                    <EditText
+                        android:id="@+id/hora_descarte_fin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:hint="18:00"
+                        android:layout_marginStart="10dp"/>
+
+                </LinearLayout>
 
                 <Button
+                    android:id="@+id/añadir_horario_descartado"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -103,6 +121,16 @@
                     android:layout_marginBottom="@dimen/disponibilidad_margin_bottom"/>
 
             </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerHorariosDecartados"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/disponibilidad_margin_bottom">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_margin="30dp"
