--- a/Auriculoterapia/app/src/main/res/layout/activity_answer_treatment_request.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_answer_treatment_request.xml
@@ -91,6 +91,7 @@
 
             </LinearLayout>
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -109,6 +110,26 @@
                     android:layout_height="match_parent" />
 
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="16dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:text="@string/tiempo_de_cada_terapia"
+                    android:textSize="@dimen/text_size" />
+
+                <androidx.appcompat.widget.AppCompatSpinner
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
