--- a/Auriculoterapia/app/src/main/res/layout/fragment_new_treatment.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_new_treatment.xml
@@ -162,4 +162,16 @@
         app:layout_constraintStart_toEndOf="@+id/tv_edad"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tv_urlImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="44dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toStartOf="@+id/btn_InsertarImagen"
+        app:layout_constraintStart_toEndOf="@+id/tv_examinarFoto"
+        app:layout_constraintTop_toBottomOf="@+id/tv_sintomas" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
