--- a/Auriculoterapia/app/src/main/res/layout/activity_main.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,10 +16,7 @@
         android:orientation="vertical"
         android:padding="16dp"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+       >
 
 
         <ImageView
@@ -45,38 +42,19 @@
 
     </LinearLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="380dp"
-        android:layout_height="500dp"
-        android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/linearLayout"
-        tools:layout_editor_absoluteY="111dp">
 
 
-        <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="16dp"
-            android:layout_weight="8"
-            android:alignmentMode="alignMargins"
-            android:columnCount="2"
-            android:columnOrderPreserved="false"
-            android:padding="14dp"
-            android:rowCount="3"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
 
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
             <androidx.cardview.widget.CardView
                 android:id="@+id/appointment_option"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:layout_margin="16dp"
+                android:layout_width="95dp"
+                android:layout_height="95dp"
+                android:layout_margin="12dp"
                 android:padding="16dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
@@ -109,9 +87,9 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/patient_option"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:layout_margin="16dp"
+                android:layout_width="95dp"
+                android:layout_height="95dp"
+                android:layout_margin="12dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
 
@@ -147,9 +125,9 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/results_option"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:layout_margin="16dp"
+                android:layout_width="95dp"
+                android:layout_height="95dp"
+                android:layout_margin="12dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
 
@@ -176,13 +154,19 @@
                         android:textSize="13sp" />
                 </LinearLayout>
 
+
             </androidx.cardview.widget.CardView>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/notification_option"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:layout_margin="16dp"
+                android:layout_width="95dp"
+                android:layout_height="95dp"
+                android:layout_margin="12dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
 
@@ -213,9 +197,9 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/configuration_option"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:layout_margin="16dp"
+                android:layout_width="95dp"
+                android:layout_height="95dp"
+                android:layout_margin="12dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
 
@@ -244,8 +228,8 @@
 
             </androidx.cardview.widget.CardView>
 
+    </LinearLayout>
 
-        </GridLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
