--- a/Auriculoterapia/app/src/main/res/layout/activity_main_patient.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_main_patient.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,9 +15,7 @@
         android:orientation="vertical"
         android:padding="16dp"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+       >
 
 
         <ImageView
@@ -43,35 +41,21 @@
 
     </LinearLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="380dp"
-        android:layout_height="500dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-
-
-        <GridLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="16dp"
-            android:layout_weight="8"
-            android:alignmentMode="alignMargins"
-            android:columnCount="2"
-            android:columnOrderPreserved="false"
-            android:padding="14dp"
-            android:rowCount="3"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/appointment_option_patient"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:layout_margin="16dp"
+                android:layout_width="95dp"
+                android:layout_height="95dp"
+                android:layout_margin="12dp"
                 android:padding="16dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
@@ -104,9 +88,9 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/treatment_option_patient"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:layout_margin="16dp"
+                android:layout_width="95dp"
+                android:layout_height="95dp"
+                android:layout_margin="12dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
 
@@ -142,9 +126,9 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/results_option_patient"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:layout_margin="16dp"
+                android:layout_width="95dp"
+                android:layout_height="95dp"
+                android:layout_margin="12dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
 
@@ -172,12 +156,17 @@
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
             <androidx.cardview.widget.CardView
                 android:id="@+id/notification_option_patient"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:layout_margin="16dp"
+                android:layout_width="95dp"
+                android:layout_height="95dp"
+                android:layout_margin="12dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
 
@@ -208,9 +197,9 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/configuration_option_patient"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:layout_margin="16dp"
+                android:layout_width="95dp"
+                android:layout_height="95dp"
+                android:layout_margin="12dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
 
@@ -238,9 +227,9 @@
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+            </LinearLayout>
+
+        </LinearLayout>
 
 
-        </GridLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
