--- a/Auriculoterapia/app/src/main/res/layout/activity_treatment_request.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_treatment_request.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -194,7 +194,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="30dp"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -207,10 +207,10 @@
                     <ImageView
                         android:id="@+id/solicitudFoto"
 
-                        android:layout_width="100dp"
-                        android:layout_height="120dp"
+                        android:layout_width="120dp"
+                        android:layout_height="140dp"
                         android:layout_gravity="end"
-                        android:background="#444"
+                        android:background="#9E9E9E"
                         android:layout_marginEnd="24dp"
                         android:src="@drawable/image_image"
                         />
@@ -245,4 +245,4 @@
 
     </androidx.cardview.widget.CardView>
 
-</RelativeLayout>
+</ScrollView>
