--- a/Auriculoterapia/app/src/main/res/layout/fragment_evaluation_form_treatment.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_evaluation_form_treatment.xml
@@ -96,7 +96,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_otros2" />
 
     <TextView
-        android:id="@+id/tv_tratamiento"
+        android:id="@+id/tv_tratamientoResult"
         android:layout_width="58dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="155dp"
@@ -112,7 +112,7 @@
         android:layout_marginTop="32dp"
         android:text="1"
         app:layout_constraintStart_toEndOf="@+id/tv_malestar"
-        app:layout_constraintTop_toBottomOf="@+id/tv_tratamiento" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_tratamientoResult" />
 
     <TextView
         android:id="@+id/tv_Codigo"
