--- a/Auriculoterapia/app/src/main/res/layout/fragment_results_history.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_results_history.xml
@@ -57,15 +57,14 @@
             android:id="@+id/ratio_evolucion_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="80%"
-            android:textSize="32sp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
             android:layout_gravity="center"
             android:background="@drawable/ratio_evolucion_forma"
-            />
+            android:paddingStart="10dp"
+            android:paddingTop="15dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="15dp"
+            android:text="80%"
+            android:textSize="32sp" />
 
         <TextView
             android:layout_width="wrap_content"
