--- a/Auriculoterapia/app/src/main/res/layout/activity_log_in.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_log_in.xml
@@ -92,8 +92,8 @@
         android:layout_marginEnd="55dp"
         android:ems="10"
         android:hint="@string/password"
-        android:maxLength="20"
         android:inputType="textPassword"
+        android:maxLength="20"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_password" />
@@ -104,12 +104,23 @@
         android:layout_height="55dp"
         android:layout_marginStart="48dp"
         android:layout_marginEnd="55dp"
+        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ123456789"
         android:ems="10"
         android:hint="@string/nombre_de_usuario"
-        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ123456789"
-        android:maxLength="20"
         android:inputType="textPersonName"
+        android:maxLength="20"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_userlog"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_userlog" />
+
+    <Button
+        android:id="@+id/btn_validarCorreo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Validar Correo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_optionForgetPassword" />
 </androidx.constraintlayout.widget.ConstraintLayout>
